--- a/app/components/app-header/app-header.template.html
+++ b/app/components/app-header/app-header.template.html
@@ -1,8 +1,17 @@
 <!-- Navigation -->
 <div class="">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
+    <nav
+        class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top"
+        id="header"
+    >
         <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#!/">
-            <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="" />
+            <img
+                src="../static/image/light.png"
+                width="50"
+                height="50"
+                class="d-inline-block align-top"
+                alt=""
+            />
             <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
         </a>
         <button
@@ -20,7 +29,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <form class="form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
                 <div class="input-group">
-                    <input ng-model="code" type="text" class="form-control" placeholder="Enter the join code ..." />
+                    <input
+                        ng-model="code"
+                        type="text"
+                        class="form-control"
+                        placeholder="Enter the join code ..."
+                    />
                     <div class="input-group-append">
                         <a class="btn btn-light" href="#!/doing/{{code}}">Start</a>
                     </div>
@@ -45,7 +59,10 @@
                     >
                         Pages
                     </a>
-                    <div class="dropdown-menu dropdown-menu fadeInUp m-0" aria-labelledby="navbarDropdown">
+                    <div
+                        class="dropdown-menu dropdown-menu fadeInUp m-0"
+                        aria-labelledby="navbarDropdown"
+                    >
                         <a class="dropdown-item" href="./doing.html">Doing</a>
                         <a class="dropdown-item" href="./contract.html">Contract Us</a>
                     </div>
@@ -64,7 +81,7 @@
                 <li class="nav-item ml-4 px-3 dropdown" id="avatar">
                     <a
                         id="sub-avt-menu"
-                        class="avt-container "
+                        class="avt-container"
                         data-toggle="dropdown"
                         aria-haspopup="true"
                         aria-expanded="false"
@@ -74,7 +91,9 @@
                         <i class="bi bi-caret-down-fill ml-1"></i>
                         <div class="dropdown-menu animated fadeInUp" aria-labelledby="sub-avt-menu">
                             <a class="dropdown-item" href="#!/user-info">Your profile</a>
-                            <a class="dropdown-item" href="#!/login" ng-click="handelLogout()">Logout</a>
+                            <a class="dropdown-item" href="#!/login" ng-click="handelLogout()"
+                                >Logout</a
+                            >
                         </div>
                     </a>
                 </li>
