--- a/app/components/app-header/app-header.template.html
+++ b/app/components/app-header/app-header.template.html
@@ -45,9 +45,12 @@
                     <a class="nav-link" href="#!/">Home</a>
                 </li>
                 <li class="nav-item mb-2 mb-lg-0">
-                    <a class="nav-link" href="./courses.html">Courses</a>
+                    <a class="nav-link" href="#!/quizzes">Quizzes</a>
                 </li>
-                <li class="nav-item mb-2 mb-lg-0 dropdown">
+                <li class="nav-item mb-2 mb-lg-0">
+                    <a class="nav-link" href="#!/contract">Contract Us</a>
+                </li>
+                <!-- <li class="nav-item mb-2 mb-lg-0 dropdown">
                     <a
                         class="nav-link"
                         href="#"
@@ -66,7 +69,9 @@
                         <a class="dropdown-item" href="./doing.html">Doing</a>
                         <a class="dropdown-item" href="./contract.html">Contract Us</a>
                     </div>
-                </li>
+                </li> -->
+
+
 
                 <li ng-hide="$parent.userLogin" class="nav-item mb-2 mb-lg-0 active">
                     <a class="nav-link" href="#!/login">Sign In</a>
