--- a/static/style/UserInfo/UserInfo.scss
+++ b/static/style/UserInfo/UserInfo.scss
@@ -74,7 +74,7 @@
                 flex-direction: row-reverse;
                 justify-content: end;
 
-                input[value] {
+                input {
                     padding-left: 1rem;
                     background-color: transparent;
                     border: none;
