Create Notifier service

--- a/app/components/app-banner/app-banner.template.html
+++ b/app/components/app-banner/app-banner.template.html
@@ -86,22 +86,22 @@
                 </div>
             </div>
         </div>
-        <a
+        <button
             class="carousel-control-prev"
             href="#carouselExampleControls"
             role="button"
             data-slide="prev"
         >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </a>
-        <a
+        </button>
+        <button
             class="carousel-control-next"
             href="#carouselExampleControls"
             role="button"
             data-slide="next"
         >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </a>
+        </button>
     </div>
 </header>
 <!-- Header -->
