--- a/app/views/app-login.template.html
+++ b/app/views/app-login.template.html
@@ -72,7 +72,7 @@
 
                     <div class="text-center">
                         <p class="mb-2">Don't have an account</p>
-                        <a href="./signup.html" class="btn bg-linear-gradient hover">
+                        <a href="#!/signup" class="btn bg-linear-gradient hover">
                             <p class="mb-0 px-4">Sign Up</p>
                         </a>
                     </div>
