--- a/app/assets/style/Modal/Modal.scss
+++ b/app/assets/style/Modal/Modal.scss
@@ -1,6 +1,7 @@
 .modal-content {
     border-radius: 20px;
     border: none;
+    overflow: hidden;
     .modal-header {
         color: #000000bb;
         background-color: #61D6DD33;
