--- a/app/components/app-banner/app-banner.template.html
+++ b/app/components/app-banner/app-banner.template.html
@@ -71,14 +71,14 @@
                         <a
                             data-wow-delay="0.3s"
                             data-wow-duration="1.2s"
-                            href="#!/signup.html"
+                            href="#!/signup"
                             class="wow fadeInLeft flex-grow-1 btn btn-customize py-3"
                             >Register</a
                         >
                         <a
                             data-wow-delay="0.3s"
                             data-wow-duration="1.2s"
-                            href="./login.html"
+                            href="#!/login"
                             class="wow fadeInRight flex-grow-1 btn btn-customize py-3 ml-4"
                             >Log In</a
                         >
@@ -86,22 +86,22 @@
                 </div>
             </div>
         </div>
-        <a
+        <button
             class="carousel-control-prev"
             href="#carouselExampleControls"
             role="button"
             data-slide="prev"
         >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        </a>
-        <a
+        </button>
+        <button
             class="carousel-control-next"
             href="#carouselExampleControls"
             role="button"
             data-slide="next"
         >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        </a>
+        </button>
     </div>
 </header>
 <!-- Header -->
