update info page

--- a/app/views/app-doing.template.html
+++ b/app/views/app-doing.template.html
@@ -8,6 +8,7 @@
                     <div class="wow fadeInLeft box bg-light px-4 py-5 shadow">
                         <div class="info d-flex align-items-center ml-3 position-relative">
                             <img
+                                check-image
                                 class="h-100 rounded-circle mr-3 shadow"
                                 src="{{$parent.userLogin.avatar}}"
                                 width="80px"
