--- a/app/views/app-login.template.html
+++ b/app/views/app-login.template.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="form-group">
-                        <a href="./forgot-password.html">
+                        <a href="#!/reset-password">
                             <p class="text-right">Forgot password ?</p>
                         </a>
                     </div>
