--- a/app/views/app-info.template.html
+++ b/app/views/app-info.template.html
@@ -229,21 +229,21 @@
                                 <i class="bi bi-book"></i>
                                 Quiz completed
                             </div>
-                            <div class="item-process">10</div>
+                            <div class="item-process">{{$parent.userLogin.completed || "0"}} </div>
                         </div>
                         <div class="item mx-2 mb-3">
                             <div class="item-title">
                                 <i class="bi bi-alarm"></i>
                                 Operation time
                             </div>
-                            <div class="item-process">1h 20m</div>
+                            <div class="item-process">{{$parent.userLogin.total_time | formatTime}}</div>
                         </div>
                         <div class="item mx-2 mb-3">
                             <div class="item-title">
                                 <i class="bi bi-lightning"></i>
                                 Average score
                             </div>
-                            <div class="item-process">8.79</div>
+                            <div class="item-process"><span>{{$parent.userLogin.avg_score || 0 | number : 0  }}</span><sub>/100</sub> </div>
                         </div>
                     </div>
                 </div>
