--- a/app/views/app-summary.template.html
+++ b/app/views/app-summary.template.html
@@ -7,7 +7,7 @@
 
                     <div class="row px-5 justify-content-around">
                         <div class="col-md-5 mb-3 info">
-                            <img class="avatar" src="{{$parent.userLogin.avatar}}" alt="" />
+                            <img check-image class="avatar" src="{{$parent.userLogin.avatar}}" alt="" />
                             <div class="name text-left">
                                 <h4 class="font-weight-bolder">{{$parent.userLogin.fullname}}</h4>
                                 <h6>Class: {{$parent.userLogin.class}}</h6>
@@ -35,8 +35,8 @@
                         <div class="col-md-4">
                             <div class="item mx-auto rank">
                                 <i class="bi bi-award-fill"></i>
-                                <div class="score">1/10</div>
-                                <span class="title">Rank</span>
+                                <div class="score">{{info.total_time}}</div>
+                                <span class="title">Total time</span>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -44,6 +44,13 @@
                                 <i class="bi bi-clipboard2-pulse-fill"></i>
                                 <div class="score">{{info.score | number: 0}}</div>
                                 <span class="title">Score</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="item mx-auto time">
+                                <i class="bi bi-clock-fill"></i>
+                                <div class="score">{{info.timePerQuestion | number :3}}s</div>
+                                <span class="title">Time/question</span>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -66,13 +73,6 @@
                                 <i class="bi bi-calendar-x-fill"></i>
                                 <div class="score">{{info.incorrect}}</div>
                                 <span class="title">Incorrect</span>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="item mx-auto time">
-                                <i class="bi bi-clock-fill"></i>
-                                <div class="score">{{info.timePerQuestion | number :3}}s</div>
-                                <span class="title">Time/question</span>
                             </div>
                         </div>
                     </div>
